--- a/cmsHandin/wwwroot/scss/sections/sections.scss
+++ b/cmsHandin/wwwroot/scss/sections/sections.scss
@@ -3,6 +3,7 @@
 @import "brands.scss";
 @import "breadcrumb.scss";
 @import "letUsKnow.scss";
+@import "searchResults.scss";
 @import "home/home.scss";
 @import "about/about.scss";
 @import "contact/contact.scss";
